# SoftAdapt-Keras

./: .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  pyproject.toml
docs/: frame.html.jinja2
scripts/: make_docs.py
src/softadapt/: __init__.py
src/softadapt/algorithms/: loss_weighted_variant.py  normalized_slopes_variant.py  original_variant.py
src/softadapt/base/: _softadapt_base_class.py
src/softadapt/callbacks/: adaptive_loss.py
src/softadapt/constants/: __init__.py
src/softadapt/utilities/: _finite_difference.py
tests/: test_adaptive_callback.py  test_base_class.py  test_finite_difference.py  test_softadapt_original_variant.py
tests/algorithms/: test_loss_weighted_softadapt.py  test_normalized_softadapt.py
