[project]
name = "softadapt"
authors = [
    { name = "A. Ali Heydari", email = "aliheydari@ucdavis.edu" },
    { name = "Jacob Logas", email = "jacob@logas.me" },
]
version = "0.1.3"
maintainers = [{ name = "Jacob Logas", email = "jacob@logas.me" }]
description = "SoftAdapt: Techniques for Adaptive Loss Weighting of Neural Networks with Multi-Part Loss Functions implemented in Keras"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "Physics-Informed Neural Networks",
    "Balancing PINNs Loss",
    "Adaptive-Weighting, Multi-Task-Nerual-Networks Optimization",
    "Gradient-Descent-Weighting, Machine Learning",
]
dependencies = ["findiff>=0.12.1", "keras>=3.12.0"]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://gitlab.com/raccs-lab/auramask-library/SoftAdapt-Keras"
Issues = "https://gitlab.com/raccs-lab/auramask-library/SoftAdapt-Keras/-/issues"

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ImportWarning",
    "ignore::RuntimeWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::FutureWarning",
    "ignore::UserWarning",
    # Ignore a spurious warning on tf-nightly related to save model changes.
    "ignore:Custom mask layers require a config",
]
addopts = "--cov=softadapt --cov-report term"

[tool.coverage.run]
relative_files = true
omit = [
    "*/__version__.py",
    "*/__init__.py"
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if 0:',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    'class .*\bProtocol\):',
    '@(abc\.)?abstractmethod',
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
gpg_sign = true
version_files = [
    "src/softadapt/__version__.py"
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    "torch>=2.9.1",
]

[tool.uv.sources]
torch = [{ index = "pytorch", marker = "platform_system == 'Linux'" }]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
